--- a/.github/workflows/powershell-ci.yml
+++ b/.github/workflows/powershell-ci.yml
@@ -14,10 +14,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Setup PowerShell
-      uses: actions/setup-powershell@v2
-
-    - name: Run PSScriptAnalyzer
+    - name: Install PSScriptAnalyzer
+      shell: pwsh
       run: |
         Install-Module -Name PSScriptAnalyzer -Force -Scope CurrentUser
+
+    - name: Run PSScriptAnalyzer
+      shell: pwsh
+      run: |
         Invoke-ScriptAnalyzer -Path ./Scripts -Recurse -Severity Warning,Error
